--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rasca y gana</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🎁 Rasca y gana</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="card">
-    <h1>🎁 ¡Rasca para descubrir tu sorpresa! 🎁</h1>
-    <div class="scratch-wrapper">
-      <div class="message">¿Quieres ser el padrino de Julieta?</div>
-      <canvas id="scratchCanvas" width="300" height="150"></canvas>
-    </div>
+  <div class="container">
+    <h1>🎁 ¡Rasca aquí! 🎁</h1>
+    <canvas id="scratchCanvas" width="300" height="150"></canvas>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
