--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🎁 Rasca y gana</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rasca y Gana - Julieta</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/scratchcard-js@1.5.5/dist/scratchcard.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>🎁 ¡Rasca aquí! 🎁</h1>
-    <canvas id="scratchCanvas" width="300" height="150"></canvas>
+    <h2>🎁 ¡Rasca aquí! 🎁</h2>
+    <div id="js-container"></div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
