--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rasca y Gana - Julieta</title>
+  <title>Rasca y Gana</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/scratchcard-js@1.5.5/dist/scratchcard.min.js"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="card">
     <h2>🎁 ¡Rasca aquí! 🎁</h2>
-    <div id="js-container"></div>
+    <div class="scratch-container">
+      <div class="scratch-message">¿Quieres ser el padrino de Julieta?</div>
+      <canvas id="scratchCanvas"></canvas>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
